[Misc] Reduce SonarQube + IJ violation count + replace multiline strings with text blocks