@@ -22,6 +22,7 @@ package org.xwiki.rendering.internal.transformation.icon;
 import java.io.StringReader;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.xwiki.component.manager.ComponentManager;
@@ -60,31 +61,32 @@ class IconTransformationTest
     @Test
     void transform() throws Exception
     {
-        String expected = "beginDocument [[syntax]=[XWiki 2.1]]\n"
-            + "beginParagraph\n"
-            + "onWord [Some]\n"
-            + "onSpace\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [emoticon_smile]] [true]\n"
-            + "onSpace\n"
-            + "onWord [smileys]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [emoticon_unhappy]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [emoticon_tongue]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [emoticon_grin]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [emoticon_wink]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [thumb_up]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [thumb_down]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [information]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [accept]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [cancel]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [error]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [add]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [delete]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [help]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [lightbulb]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [lightbulb_off]] [true]\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [star]] [true]\n"
-            + "endParagraph\n"
-            + "endDocument [[syntax]=[XWiki 2.1]]";
+        String expected = """
+            beginDocument [[syntax]=[XWiki 2.1]]
+            beginParagraph
+            onWord [Some]
+            onSpace
+            onImage [Typed = [true] Type = [icon] Reference = [emoticon_smile]] [true]
+            onSpace
+            onWord [smileys]
+            onImage [Typed = [true] Type = [icon] Reference = [emoticon_unhappy]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [emoticon_tongue]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [emoticon_grin]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [emoticon_wink]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [thumb_up]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [thumb_down]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [information]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [accept]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [cancel]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [error]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [add]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [delete]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [help]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [lightbulb]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [lightbulb_off]] [true]
+            onImage [Typed = [true] Type = [icon] Reference = [star]] [true]
+            endParagraph
+            endDocument [[syntax]=[XWiki 2.1]]""";
 
         Parser parser = this.componentManager.getInstance(Parser.class, "xwiki/2.1");
         XDOM xdom = parser.parse(new StringReader("Some :) smileys:(:P:D;)(y)(n)(i)(/)(x)(!)(+)(-)(?)(on)(off)(*)"));
@@ -99,14 +101,15 @@ class IconTransformationTest
     @Test
     void transformIgnoresProtectedContent() throws Exception
     {
-        String expected = "beginDocument\n"
-            + "beginMacroMarkerStandalone [code] []\n"
-            + "onSpecialSymbol [:]\n"
-            + "onSpecialSymbol [)]\n"
-            + "endMacroMarkerStandalone [code] []\n"
-            + "endDocument";
+        String expected = """
+            beginDocument
+            beginMacroMarkerStandalone [code] []
+            onSpecialSymbol [:]
+            onSpecialSymbol [)]
+            endMacroMarkerStandalone [code] []
+            endDocument""";
 
-        XDOM xdom = new XDOM(Arrays.asList((Block) new MacroMarkerBlock("code", Collections.emptyMap(),
+        XDOM xdom = new XDOM(List.of((Block) new MacroMarkerBlock("code", Collections.emptyMap(),
             Arrays.asList(new SpecialSymbolBlock(':'), new SpecialSymbolBlock(')')), false)));
         this.transformation.transform(xdom, new TransformationContext());
 
@@ -122,13 +125,14 @@ class IconTransformationTest
     @Test
     void transformWhenIncompleteMatchExistsFollowedByMatch() throws Exception
     {
-        String expected = "beginDocument [[syntax]=[XWiki 2.1]]\n"
-            + "beginParagraph\n"
-            + "onSpecialSymbol [(]\n"
-            + "onSpace\n"
-            + "onImage [Typed = [true] Type = [icon] Reference = [information]] [true]\n"
-            + "endParagraph\n"
-            + "endDocument [[syntax]=[XWiki 2.1]]";
+        String expected = """
+            beginDocument [[syntax]=[XWiki 2.1]]
+            beginParagraph
+            onSpecialSymbol [(]
+            onSpace
+            onImage [Typed = [true] Type = [icon] Reference = [information]] [true]
+            endParagraph
+            endDocument [[syntax]=[XWiki 2.1]]""";
 
         Parser parser = this.componentManager.getInstance(Parser.class, "xwiki/2.1");
         XDOM xdom = parser.parse(new StringReader("( (i)"));
